--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,15 @@ dependencies {
 
     /* Swipe Refresh Layout */
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
+    /* Retrofit */
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    /* Glide */
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.github.bumptech.glide:annotations:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'com.caverock:androidsvg:1.2.1'
 }
