--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.wotosts.recruit_backpacker">
+    package="com.amber.sample">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -10,8 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Recruitbackpacker">
-        <activity android:name=".ui.MainActivity">
+        android:theme="@style/Theme.LificSample">
+        <activity android:name="com.amber.sample.ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
